WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52987
REGRESSION (
r73369
-
r73405
): Overflowing columns not repainted correctly
https://bugs.webkit.org/show_bug.cgi?id=52987
Summary
REGRESSION (r73369-r73405): Overflowing columns not repainted correctly
Joseph Pearson
Reported
2011-01-23 18:00:35 PST
The first nightly this bug appeared in was
r73429
.
r73340
exhibits the expected behaviour. The Monocle ebook reading library utilises the following technique: * All the content is in a fixed width/height iframe. * In response to UI events, the document body inside the frame is translated horizontally. You can see it in effect here:
http://things-we-didnt-c2f954.reading.booki.sh
. Turning past the first page in recent nightlies shows blank pages. In Safari 5.0.3 it behaves as expected. The same bug exhibits if the body's scrollLeft is changed rather than its X translation. My suspicion is that it is caused by the patch to this bug:
https://bugs.webkit.org/show_bug.cgi?id=50593
I'm not familiar with WebKit development, but I'm happy to refine this bug report and do further investigation if required — the effect of this bug on us is huge!
Attachments
Testcase demonstrating disappearing columns when scrolling horizontally
(10.52 KB, text/html)
2011-02-25 17:07 PST
,
Joseph Pearson
no flags
Details
Patch
(165.38 KB, patch)
2011-03-11 13:53 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-01-23 19:18:20 PST
Confirmed with
r76456
on Mac OS X.
Alexey Proskuryakov
Comment 2
2011-01-23 19:18:50 PST
<
rdar://problem/8905571
>
Simon Fraser (smfr)
Comment 3
2011-01-23 19:40:17 PST
Can you create a simple testcase that shows the problem?
Joseph Pearson
Comment 4
2011-01-23 20:21:08 PST
Thanks for the prompt response, guys. Here's a test case that works as expected in Saf 5.0.3, broken in latest nightly:
http://pockets.inventivelabs.com.au/webkit-out-of-bounds/index.html
mitz
Comment 5
2011-01-23 21:29:05 PST
Looks like this was caused by <
http://trac.webkit.org/changeset/73385
>.
Joseph Pearson
Comment 6
2011-02-25 17:00:55 PST
I've updated the title of this bug, in line with what the testcase demonstrates — this is a more fundamental rendering problem than just Monocle compat. An element with columns and a height will disappear if translated or even if the document is scrolled. This is all you need to see the problem: body { height: 300px; -webkit-column-width: 200px; } It doesn't need to be in an iframe, it doesn't need to be translated. Just add a bunch of lorem ipsum and attempt to scroll horizontally. Since this is now in Chrome betas, and a public release can therefore be expected any day, I wonder if the priority of this should be upped and whether it's worth assigning it to the presumably quite busy Dave Hyatt (who authored Changeset 73385)? A number of deployed applications depend on this, and I haven't yet found a workaround.
Joseph Pearson
Comment 7
2011-02-25 17:07:42 PST
Created
attachment 83902
[details]
Testcase demonstrating disappearing columns when scrolling horizontally This is a testcase for the problem as described in my
comment #6
. When scrolling horizontally, additional columns should be visible all the way to the end of the scroll region.
Dave Hyatt
Comment 8
2011-03-11 13:53:56 PST
Created
attachment 85527
[details]
Patch Found the issue.
Dave Hyatt
Comment 9
2011-03-11 14:08:28 PST
Fixed in
r80883
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug