https://bugs.webkit.org/show_bug.cgi?id=52987

Reviewed by Simon Fraser.

REGRESSION: Overflowing columns not repainted correctly

Make sure to add in column overflow as visual overflow as well.  It was only propagating layout overflow, which is obviously not
sufficient, since blocks paint their own columns.

Added fast/multicol/scrolling-overflow.html

Source/WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addOverflowFromChildren):

LayoutTests:

* fast/multicol/scrolling-overflow.html: Added.
* platform/mac/fast/multicol/scrolling-overflow-expected.checksum: Added.
* platform/mac/fast/multicol/scrolling-overflow-expected.png: Added.
* platform/mac/fast/multicol/scrolling-overflow-expected.txt: Added.



Canonical link: https://commits.webkit.org/70768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80883 268f45cc-cd09-0410-ab3c-d52691b4dbfc